fix ace editor z-index issue

--- a/assets/scss/settings/_settings.global.scss
+++ b/assets/scss/settings/_settings.global.scss
@@ -47,6 +47,6 @@ $card-body-py: 1.25em;
 $card-body-px: 1.56em;
 
 // Z-index
-$loader-z-index: 1;
+$loader-z-index: 4;
 $header-z-index: $loader-z-index + 1;
 $sidebar-z-index: $header-z-index + 1;
